# panda-launcher

./: .gitignore  CMakeLists.txt  README.md  flyma-launcher.pro  panda-launcher.pro
QtSingleApplication/: CMakeLists.txt  qtlockedfile.cpp  qtlockedfile_unix.cpp  qtsingleapplication.cpp
debian/: changelog  control
fullscreen/: CMakeLists.txt  applicationadaptor.h  appsmanager.cpp  calcutil.h  desktopinfo.h  desktopproperties.cpp  fullscreenframe.cpp  itemdelegate.cpp  listmodel.cpp  listview.cpp  listview.h  main.cpp  searchedit.cpp  searchedit.h  utils.cpp
keyboard/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  applicationadaptor.cpp  apprunthread.cpp  appsmanager.cpp  appsmanager.h  calcutil.cpp  calcutil.h  desktopinfo.h  desktopproperties.h  fullscreenframe.cpp  fullscreenframe.h  itemdelegate.cpp  itemdelegate.h  listmodel.cpp  listmodel.h  listview.cpp  listview.h  main.cpp  org.panda.launcher.xml  resources.qrc  searchedit.cpp  searchedit.h  utils.cpp  utils.h
